# dmi-rust

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: chunk.rs  crc.rs  dirs.rs  dmi.rs  error.rs  icon.rs  iend.rs  lib.rs  tests.rs  ztxt.rs
src/dmi/: chunk.rs  crc.rs  error.rs  icon.rs  iend.rs  ztxt.rs
tests/: bench_dmi_load.rs  dmi_ops.rs  load_dmi.rs  load_test.dmi
tests/resources/: dirs_frames.dmi  load_test.dmi  save_test.dmi
