[package]
name = "dmi"
version = "0.3.7"
edition = "2021"
license = "MIT"
description = "DMI library written in Rust. Provides helpers to manipulate and produce DMI format files."
authors = ["Rohesie <rohesie@gmail.com>"]
keywords = ["byond", "dreammaker", "dmi", "ss13", "spacestation13"]
homepage = "https://github.com/spacestation13/dmi"
exclude = ["src/tests.rs", "tests/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6"
deflate = "1.0"
image = { version = "0.25.4", default-features = false, features = ["png"] }
inflate = "0.4.5"
thiserror = "1.0"
