[package]
name = "dmi"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "DMI library written in Rust. Provides helpers to manipulate and produce DMI format files."
authors = ["Rohesie <rohesie@gmail.com>"]
keywords = ["byond", "dreammaker", "dmi", "ss13", "spacestation13"]
homepage = "https://github.com/spacestation13/dmi"
exclude = ["src/tests.rs", "tests/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
crc32fast = "1"
deflate = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
inflate = "0.4"
png = "0.17.16"
thiserror = "2"
